Changed String date to Date, added batch process to deleted all the expired auctions